# copypaster

./: .gitignore  CHANGELOG.md  Package.swift  README.md  build.sh  package-lock.json  package.json
.github/workflows/: build.yml
Resources/: Info.plist
Sources/CopyPaster/: HotKeyMonitor.swift  Log.swift  Model.swift  PasteboardWatcher.swift  Paster.swift  PopupWindow.swift  ScreenshotWatcher.swift  main.swift
docs/: DEVELOPMENT.md
src/: index.html  keys.js  keys.test.js  main.js  nav.js  nav.test.js  scale.js  search.js  search.test.js  settings.html  settings.js  shortcuts.html  shortcuts.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  debug_log.rs  history.rs  lib.rs  mac_window.rs  main.rs  paste.rs  private.rs  screenshot.rs  settings.rs  source_app.rs  store.rs
src-tauri/tests/: stage_concealed_clip.swift
